--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "gh": "^2.8.9",
     "gh-pages": "^6.2.0",
     "lottie-web": "^5.12.2",
+    "pages": "^0.0.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
